// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test DrawingToolButtonGroup should render correctly 1`] = `
<div>
  <div
    class="flux"
  >
    <div
      class="container"
      id="left-Preview"
      title="Camera Preview"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container active"
      id="left-Cursor"
      title="Select (V)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Photo"
      title="Image (I)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Text"
      title="Text (T)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Element"
      title="Elements (E)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Rectangle"
      title="Rectangle (M)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Ellipse"
      title="Oval (C)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Polygon"
      title="Polygon"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Line"
      title="Line (\\)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Pen"
      title="Pen (P)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-AiGenerate"
      title="AI Create"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Generator"
      title="Generator"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="separator"
    />
    <div
      class="container beamy"
      id="left-Beamy"
      title="Beamy"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
  </div>
</div>
`;

exports[`test DrawingToolButtonGroup should render correctly when in pass through mode 1`] = `
<div>
  <div
    class="flux"
  >
    <div
      class="container"
      id="left-Preview"
      title="Camera Preview"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container active"
      id="left-Cursor"
      title="Select (V)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Photo"
      title="Image (I)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Text"
      title="Text (T)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Element"
      title="Elements (E)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Rectangle"
      title="Rectangle (M)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Ellipse"
      title="Oval (C)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Polygon"
      title="Polygon"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Line"
      title="Line (\\)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Pen"
      title="Pen (P)"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-AiGenerate"
      title="AI Create"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-Generator"
      title="Generator"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="container"
      id="left-PassThrough"
      title="Passthrough"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
    <div
      class="separator"
    />
    <div
      class="container beamy"
      id="left-Beamy"
      title="Beamy"
    >
      <span
        class="ant-badge badge css-dev-only-do-not-override-hash"
      >
        <svgr-url />
      </span>
    </div>
  </div>
</div>
`;
